# Project-Guard

./: .coverage  .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/github_audit/: __init__.py  agent_chat.py  applier.py  branches.py  browser_scan.py  cli.py  config.py  discovery.py  github_client.py  llm_evaluator.py  logging.py  models.py  offline_export.py  project_fields.py  report.py  rules.py  scanner.py
src/github_audit/api/: __init__.py  main.py  schemas.py  service.py
tests/: conftest.py  test_agent_chat.py  test_api_main.py  test_api_service.py  test_applier.py  test_branches.py  test_browser_scan.py  test_browser_scan_full.py  test_bugfix_regressions.py  test_cli.py  test_cli_config_errors.py  test_cli_main.py  test_config.py  test_config_extended.py  test_discovery.py  test_discovery_full.py  test_github_client.py  test_llm_evaluator.py  test_llm_evaluator_full.py  test_models.py  test_offline_export.py  test_project_fields_full.py  test_report.py  test_report_extended.py  test_rules.py  test_rules_extended.py  test_scanner_extended.py  test_scanner_full.py
