[project]
name = "github-audit"
version = "0.1.0"
description = "Audit GitHub issues and pull requests for required workflow metadata."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "httpx",
    "playwright>=1.60.0",
    "pydantic",
    "pydantic-ai",
    "pydantic-settings",
    "sse-starlette>=3,<4",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
github-audit = "github_audit.cli:main"
github-audit-api = "github_audit.api.main:main"

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "pyright",
    "pytest",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
include = ["src", "tests", "app.py"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
